VT-951 Lisätään varmistusdialogi hakijaryhmän poistamiseen

--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -3,7 +3,7 @@
         <h3 class="modal-title">{{ t('valintaryhmalomake.poistavalintaryhma.header') || 'Oletko varma?' }}</h3>
     </div>
     <div class="modal-body">
-        {{ t('valintaryhmalomake.poistavalintaryhma.body') || 'Oletko varma, että halua poistaa valintaryhmän?' }}
+        {{ t('valintaryhmalomake.poistavalintaryhma.body') || 'Oletko varma, että haluat poistaa valintaryhmän?' }}
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="ok()">{{ t('valintaryhmalomake.poistavalintaryhma.kylla') || 'Kyllä' }}</button>
