--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -1,9 +1,22 @@
-﻿<script type="text/ng-template" id="poistajononmuodostumiskriteeri.html">
+﻿<script type="text/ng-template" id="poistahakijaryhma.html">
+    <div class="modal-header">
+        <h3 class="modal-title">{{ t('valintatapajono.poistahakijaryhma.header') || 'Oletko varma?' }}</h3>
+    </div>
+    <div class="modal-body">
+        {{ t('valintatapajono.poistahakijaryhma.body') || 'Oletko varma, että haluat poistaa hakijaryhmän?' }}
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">{{ t('valintatapajono.poistahakijaryhma.kylla') || 'Kyllä' }}</button>
+        <button class="btn btn-warning" ng-click="cancel()">{{ t('valintatapajono.poistahakijaryhma.ei') || 'Ei' }}</button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="poistajononmuodostumiskriteeri.html">
     <div class="modal-header">
         <h3 class="modal-title">{{ t('valintatapajono.poistajononmuodostumiskriteeri.header') || 'Oletko varma?' }}</h3>
     </div>
     <div class="modal-body">
-        {{ t('valintatapajono.poistajononmuodostumiskriteeri.body') || 'Oletko varma, että halua poistaa jonon muodostumiskriteerin?' }}
+        {{ t('valintatapajono.poistajononmuodostumiskriteeri.body') || 'Oletko varma, että haluat poistaa jonon muodostumiskriteerin?' }}
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="ok()">{{ t('valintatapajono.poistajononmuodostumiskriteeri.kylla') || 'Kyllä' }}</button>
