Poistetaan käyttöliittymästä mahdollisuus antaa kutsuttavien määrä valintakokeelle

--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -49,14 +49,15 @@
             </div>
 
             <div class="clear"></div>
-            <label class="form-row-label" for="maara">{{ t('valintakoelomake.maara') || 'Kutsuttavien määrä' }}</label>
+            <!-- Ei vielä dropata backendistä, mutta tällä hetkellä karsinta tehdään edeltävässä valinnan vaiheessa -->
+            <!--<label class="form-row-label" for="maara">{{ t('valintakoelomake.maara') || 'Kutsuttavien määrä' }}</label>-->
 
-            <div class="form-row-content">
-                <input id="maara" name="maara" ng-model="model.valintakoe.kutsuttavienMaara" type="number" min="0"
-                       ng-disabled="model.valintakoe.kutsutaankoKaikki"/>
-            </div>
+            <!--<div class="form-row-content">-->
+                <!--<input id="maara" name="maara" ng-model="model.valintakoe.kutsuttavienMaara" type="number" min="0"-->
+                       <!--ng-disabled="model.valintakoe.kutsutaankoKaikki"/>-->
+            <!--</div>-->
 
-            <div class="clear"></div>
+            <!--<div class="clear"></div>-->
             <label class="form-row-label" for="kohde">{{ t('valintakoelomake.kohde') || 'Kutsun kohde' }}</label>
 
             <div class="form-row-content">
