--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -198,6 +198,29 @@
                 </div>
             </div>
 
+
+            <div class="form-group">
+                <label class="col-md-2 control-label"
+                       for="kaytetaanRyhmaanKuuluvia"
+                       popover-popup-delay="500"
+                       popover-placement="right"
+                       popover-trigger="mouseenter"
+                       popover="Käytetäänkö hakijaryhmään kuuluvia">Käytetäänkö hakijaryhmään kuuluvia</label>
+
+                <div class="col-md-2 ">
+                    <div class="checkbox" >
+                        <input type="checkbox"
+                               ng-model="model.hakijaryhma.kaytetaanRyhmaanKuuluvia"
+                               id="kaytetaanRyhmaanKuuluvia"
+                               popover-popup-delay="500"
+                               popover-placement="right"
+                               popover-trigger="mouseenter"
+                               popover="Käytetäänkö hakijaryhmään kuuluvia"
+                                />
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="col-sm-2">
