--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -96,7 +96,9 @@
                            popover-trigger="mouseenter"
                            popover="Hakijaryhmään liittyvä laskentakaava">Laskentakaava:</label>
                 </div>
-                <div class="col-md-10">&nbsp;</div>
+                <div class="col-md-10">
+                    <span class="btn btn-sm btn-default" ng-click="createNewLaskentakaava()">Luo uusi laskentakaava</span>
+                </div>
             </div>
             <div class="form-group" ng-repeat="group in model.laskentakaavaModel.laskentakaavat">
                 <label class="col-md-2 control-label">{{group.name}}</label>
