--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
@@ -1,40 +1,47 @@
 <div ng-controller="UusiLaskentakaavaController">
-    <span class="btn btn-sm btn-default" ng-click="back()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i class="fa fa-arrow-left"></i> {{ t('common.takaisin') || 'Takaisin' }}</span>
-    <button class="btn btn-sm btn-primary"
-            ng-click="createKaava(kaava)"
-            ng-disabled="kaavaForm.$invalid"><i class="fa fa-plus"></i> {{ t('uusilaskentakaava.alusta') || 'Alusta uusi laskentakaava' }}
-    </button>
+
 
     <h2>{{ t('uusilaskentakaava.luonti') || 'Uuden laskentakaavan luonti' }}</h2>
+    <div class="col-sm-12">
+        <form name="kaavaForm" class="margin-top-2 form-horizontal" novalidate>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.nimi') || 'Laskentakaavan nimi' }}</label>
 
-    <form name="kaavaForm" class="margin-top-2" novalidate>
-        <div class="form-row">
-            <div class="form-row-label">{{ t('uusilaskentakaava.nimi') || 'Laskentakaavan nimi' }}</div>
-
-            <div class="form-row-content">
-                <input type="text" ng-model="kaava.nimi" required/>
+                <div class="col-sm-10 control-content">
+                    <input type="text" ng-model="kaava.nimi" required/>
+                </div>
             </div>
-            <div class="clear"></div>
-        </div>
-        <div class="form-row">
-            <div class="form-row-label">{{ t('uusilaskentakaava.kuvaus') || 'Laskentakaavan kuvaus' }}</div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.kuvaus') || 'Laskentakaavan kuvaus' }}</label>
 
-            <div class="form-row-content">
-                <textarea ng-model="kaava.kuvaus"></textarea>
+                <div class="col-sm-10 control-content">
+                    <textarea ng-model="kaava.kuvaus"></textarea>
+                </div>
             </div>
-            <div class="clear"></div>
-        </div>
-        <div class="form-row" ng-show="!kaava.id">
-            <div class="form-row-label">{{ t('uusilaskentakaava.tyyppi') || 'Laskentakaavan tyyppi' }}</div>
+            <div class="form-group" ng-show="!kaava.id">
+                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.tyyppi') || 'Laskentakaavan tyyppi' }}</label>
 
-            <div class="form-row-content">
-                <input type="radio" name="tyyppi" value="NIMETTYTOTUUSARVO" ng-model="kaava.tyyppi"/>
-                {{ t('uusilaskentakaava.totuusarvofunktio') || 'Totuusarvofunktio' }}
-                <br/>
-                <input type="radio" name="tyyppi" value="NIMETTYLUKUARVO" ng-model="kaava.tyyppi"/> {{ t('uusilaskentakaava.lukuarvofunktio') || 'Lukuarvofunktio' }}
+                <div class="col-sm-10 control-content">
+
+                    <div class="radio">
+                        <label for="totuusarvofunktio">
+                            <input type="radio" name="tyyppi" id="totuusarvofunktio"
+                                                              value="NIMETTYTOTUUSARVO" ng-model="kaava.tyyppi"/>
+                            {{ t('uusilaskentakaava.totuusarvofunktio') || 'Totuusarvofunktio' }}
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label for="lukuarvofunktio">
+                            <input type="radio" id="lukuarvofunktio" name="tyyppi"
+                                                                           value="NIMETTYLUKUARVO" ng-model="kaava.tyyppi"/>
+                        {{ t('uusilaskentakaava.lukuarvofunktio') || 'Lukuarvofunktio' }}
+                        </label>
+                    </div>
+
+
+                </div>
             </div>
-            <div class="clear"></div>
-        </div>
 
-    </form>
+        </form>
+    </div>
 </div>
