--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
@@ -1,47 +1,42 @@
-<div ng-controller="UusiLaskentakaavaController">
-
-
+<div class="col-sm-12" ng-controller="UusiLaskentakaavaController">
     <h2>{{ t('uusilaskentakaava.luonti') || 'Uuden laskentakaavan luonti' }}</h2>
-    <div class="col-sm-12">
-        <form name="kaavaForm" class="margin-top-2 form-horizontal" novalidate>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.nimi') || 'Laskentakaavan nimi' }}</label>
 
-                <div class="col-sm-10 control-content">
-                    <input type="text" ng-model="kaava.nimi" required/>
-                </div>
+    <form name="kaavaForm" class="form-horizontal" novalidate>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.nimi') || 'Laskentakaavan nimi' }}</label>
+
+            <div class="col-sm-10 control-content">
+                <input type="text" ng-model="kaava.nimi" required/>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.kuvaus') || 'Laskentakaavan kuvaus' }}</label>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.kuvaus') || 'Laskentakaavan kuvaus' }}</label>
 
-                <div class="col-sm-10 control-content">
-                    <textarea ng-model="kaava.kuvaus"></textarea>
-                </div>
+            <div class="col-sm-10 control-content">
+                <textarea ng-model="kaava.kuvaus"></textarea>
             </div>
-            <div class="form-group" ng-show="!kaava.id">
-                <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.tyyppi') || 'Laskentakaavan tyyppi' }}</label>
+        </div>
+        <div class="form-group" ng-show="!kaava.id">
+            <label class="col-sm-2 control-label">{{ t('uusilaskentakaava.tyyppi') || 'Laskentakaavan tyyppi' }}</label>
 
-                <div class="col-sm-10 control-content">
+            <div class="col-sm-10 control-content">
 
-                    <div class="radio">
-                        <label for="totuusarvofunktio">
-                            <input type="radio" name="tyyppi" id="totuusarvofunktio"
-                                                              value="NIMETTYTOTUUSARVO" ng-model="kaava.tyyppi"/>
-                            {{ t('uusilaskentakaava.totuusarvofunktio') || 'Totuusarvofunktio' }}
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label for="lukuarvofunktio">
-                            <input type="radio" id="lukuarvofunktio" name="tyyppi"
-                                                                           value="NIMETTYLUKUARVO" ng-model="kaava.tyyppi"/>
+                <div class="radio">
+                    <label for="totuusarvofunktio">
+                        <input type="radio" name="tyyppi" id="totuusarvofunktio"
+                               value="NIMETTYTOTUUSARVO" ng-model="kaava.tyyppi"/>
+                        {{ t('uusilaskentakaava.totuusarvofunktio') || 'Totuusarvofunktio' }}
+                    </label>
+                </div>
+                <div class="radio">
+                    <label for="lukuarvofunktio">
+                        <input type="radio" id="lukuarvofunktio" name="tyyppi"
+                               value="NIMETTYLUKUARVO" ng-model="kaava.tyyppi"/>
                         {{ t('uusilaskentakaava.lukuarvofunktio') || 'Lukuarvofunktio' }}
-                        </label>
-                    </div>
-
-
+                    </label>
                 </div>
             </div>
+        </div>
 
-        </form>
-    </div>
+    </form>
 </div>
