--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
@@ -14,6 +14,7 @@
     </div>
 
     <div class="col-sm-12 margin-bottom-2">
+        <span>{{kaavaHasId}}</span>
         <span class="btn btn-sm btn-default" ng-click="back()" popover-popup-delay="250" popover-placement="top"
               popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i
                 class="fa fa-arrow-left"></i> {{ t('laskentakaavat.listaan') || 'Laskentakaavalistaan' }}</span>
