refaktoroidaan valintaperusteiden hakumodelia

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="valintatapajono/valintatapajono.js"></script>
     <script type="text/javascript" src="jarjestyskriteeri/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="valintaryhma/organisaatio.js"></script>
+    <script type="text/javascript" src="haku/hakumodel.js"></script>
     <script type="text/javascript" src="../common/js/utils.js"></script>
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
