OVT-8487 valintaperusteiden mallinnuksessa kokeelle liitettävät laskentakaavat tuplana

--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -73,10 +73,8 @@
 
         <div class="form-row">
 
-            <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat"
-                 class="field-container-radio">
+            <div class="field-container-radio">
                 <label class="form-row-label">{{ t('valintakoelomake.valintakokeenlaskentakaava') || 'Valintakokeen laskentakaava' }}</label>
-
 
                 <div class="form-row-content">
                     <table class="virkailija-table-1">
