VT-944: userOrganizationModel käyttäjän organisaatioille

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -22,6 +22,7 @@
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="routes.js"></script>
+    <script type="text/javascript" src="userOrganizationsModel.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
     <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
