--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="organisaatio/userOrganizationsModel.js"></script>
+    <script type="text/javascript" src="userAccessLevels.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma.js"></script>
     <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
